--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,12 @@ img {
   max-width: 100%;
 }
 
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .hero {
   height: 100vh;
   background-image: url(../img/bg.jpg);
@@ -49,20 +55,104 @@ img {
 }
 
 .main-nav {
-  grid-column: 3 / 4;
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .main-nav {
+    grid-column: 3 / 4;
+    display: grid;
+    justify-content: flex-end;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  }
+
+  .main-nav a {
+    color: var(--light);
+    font-size: 1rem;
+    text-decoration: none;
+    padding: 1rem 1rem 2rem 1rem;
+    text-align: center;
+  }
+
+  .main-nav a:hover {
+    border-bottom: 1.12px solid var(--light);
+  }
+}
+
+.search-form-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: flex-start;
+}
+@media (min-width: 768px) {
+  .search-form-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+}
+
+.search-form {
+  background-color: var(--light);
+  padding: 2rem;
+  border-radius: 10px;
+  width: 480px;
+}
+.search-form h1 {
+  margin: 0 0 1rem 0;
+}
+
+.search-form form {
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+}
+.search-form .field {
+  /** Position from the parent element **/
+  grid-column: 1 / 3;
+  /** Position the labels **/
+  display: grid;
+  grid-row-gap: 0.5rem;
+  grid-template-rows: repeat(2, auto);
+}
+.search-form .date {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-row-gap: 0.5rem;
+  grid-row: 2 / 3;
+}
+.search-form .date:nth-child(1) {
+  grid-column: 1 / 2;
+}
+.search-form .date:nth-child(2) {
+  grid-column: 2 / 3;
+}
+.search-form label {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: lighter;
+}
+.search-form input[type="text"],
+.search-form input[type="date"],
+.search-form select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 0.82rem;
+  border: 2px solid #e1e1e1;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+
+.submit {
+  grid-column: 2 / 3;
   display: grid;
   justify-content: flex-end;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 }
-
-.main-nav a {
-  color: var(--light);
-  font-size: 1rem;
-  text-decoration: none;
-  padding: 1rem 2rem 2rem 1rem;
-  text-align: center;
-}
-
-.main-nav a:hover {
-  border-bottom: 1.12px solid var(--light);
+.submitBtn {
+  background-color: var(--primary);
+  color: #ffffff;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  border: none;
 }
